<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.voicemail_project.android.voicemail.start_Activity">

    <TextView
        android:id="@+id/top_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:padding="30dp"
        android:text="@string/welcome_to_voicemail"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/phoneLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top_textView"
        >

        <ImageView
            android:id="@+id/phone_verify_image"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="12dp"
            android:src="@drawable/phone_verify" />


        <EditText
            android:id="@+id/phone_editText"
            android:layout_width="255dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:padding="13dp" />

        <ProgressBar
            android:id="@+id/phone_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="invisible" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/verification_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/phoneLayout"
        android:visibility="invisible">

        <ImageView
            android:id="@+id/verification_code_image"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="12dp"
            android:src="@drawable/verification_image" />

        <EditText
            android:id="@+id/verification_code_editText"
            android:layout_width="256dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:hint="@string/verification_code"
            android:inputType="phone"
            android:padding="13dp" />

        <ProgressBar
            android:id="@+id/verification_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="invisible" />
    </LinearLayout>

    <TextView
        android:id="@+id/usage_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inCompleteTextView"
        android:layout_centerHorizontal="true"
        android:padding="20dp"
        android:text="@string/information_the_standard_rates_will_apply_for_sending_message"
        android:gravity="center"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/send_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/send_verfication_code"
        android:textColor="@color/black"
        android:background="@android:drawable/dialog_holo_light_frame" />

    <TextView
        android:id="@+id/inCompleteTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/verification_layout"
        android:layout_centerHorizontal="true"
        android:padding="20dp"
        android:gravity="center"
        android:visibility="invisible"
        android:textColor="@color/dark_red"/>
</RelativeLayout>
